Now sorting gym_df by Rating and Title

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -47,7 +47,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exploratory Data Analysis"
+    "#### Exploratory Data Analysis\n",
+    "- Here we are going to be doing a number of things\n",
+    "    - Individualizing each column in the df's in case of any future calculations\n",
+    "    - Individualizing df's for each muscle group being targeted\n",
+    "    - Sorting df\n",
+    "    - Cleaning df\n",
+    "    - Getting descriptive statistics"
    ]
   },
   {
@@ -3322,7 +3328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sorting by rating\n",
+    "gym_df = gym_df.sort_values(by=['Rating', 'Title'], ascending=[False, True], na_position='last')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3359,64 +3375,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2767</th>\n",
-       "      <td>2767</td>\n",
-       "      <td>Band overhead triceps press</td>\n",
-       "      <td>The band overhead triceps press is a dynamic a...</td>\n",
+       "      <th>2882</th>\n",
+       "      <td>2882</td>\n",
+       "      <td>Triceps dip</td>\n",
+       "      <td>The triceps dip is a bodyweight exercise perfo...</td>\n",
        "      <td>Strength</td>\n",
        "      <td>Triceps</td>\n",
-       "      <td>Bands</td>\n",
+       "      <td>Body Only</td>\n",
        "      <td>Intermediate</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>Average</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2768</th>\n",
-       "      <td>2768</td>\n",
-       "      <td>Band overhead triceps extension</td>\n",
-       "      <td>The band overhead triceps extension is a singl...</td>\n",
-       "      <td>Strength</td>\n",
+       "      <th>2791</th>\n",
+       "      <td>2791</td>\n",
+       "      <td>Dumbbell floor press</td>\n",
+       "      <td>The dumbbell floor press is a multijoint press...</td>\n",
+       "      <td>Powerlifting</td>\n",
        "      <td>Triceps</td>\n",
-       "      <td>Bands</td>\n",
+       "      <td>Dumbbell</td>\n",
        "      <td>Intermediate</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>Average</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2769</th>\n",
-       "      <td>2769</td>\n",
-       "      <td>Band straight-arm pull-down</td>\n",
-       "      <td>The band straight-arm pull-down is a non-gym o...</td>\n",
+       "      <th>2911</th>\n",
+       "      <td>2911</td>\n",
+       "      <td>Decline EZ-bar skullcrusher</td>\n",
+       "      <td>The decline EZ-bar skullcrusher is a popular e...</td>\n",
        "      <td>Strength</td>\n",
        "      <td>Triceps</td>\n",
-       "      <td>Bands</td>\n",
+       "      <td>E-Z Curl Bar</td>\n",
        "      <td>Intermediate</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>Average</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2770</th>\n",
-       "      <td>2770</td>\n",
-       "      <td>Band skullcrusher</td>\n",
-       "      <td>The band skullcrusher is a variation of the po...</td>\n",
+       "      <th>2883</th>\n",
+       "      <td>2883</td>\n",
+       "      <td>Weighted bench dip</td>\n",
+       "      <td>The weighted bench dip is a highly effective e...</td>\n",
        "      <td>Strength</td>\n",
        "      <td>Triceps</td>\n",
-       "      <td>Bands</td>\n",
+       "      <td>Body Only</td>\n",
        "      <td>Intermediate</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>Average</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2771</th>\n",
-       "      <td>2771</td>\n",
-       "      <td>Single-arm band kick-back</td>\n",
-       "      <td>The single-arm band kick-back is an isolation ...</td>\n",
+       "      <th>2833</th>\n",
+       "      <td>2833</td>\n",
+       "      <td>Cable V-bar push-down</td>\n",
+       "      <td>The cable V-bar push-down is a popular gym exe...</td>\n",
        "      <td>Strength</td>\n",
        "      <td>Triceps</td>\n",
-       "      <td>Bands</td>\n",
+       "      <td>Cable</td>\n",
        "      <td>Intermediate</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>Average</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -3431,61 +3447,61 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2913</th>\n",
-       "      <td>2913</td>\n",
-       "      <td>EZ-bar skullcrusher-</td>\n",
-       "      <td>The EZ-bar skullcrusher is a popular exercise ...</td>\n",
-       "      <td>Strength</td>\n",
-       "      <td>Triceps</td>\n",
-       "      <td>E-Z Curl Bar</td>\n",
-       "      <td>Intermediate</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>Average</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2914</th>\n",
-       "      <td>2914</td>\n",
-       "      <td>Lying Close-Grip Barbell Triceps Press To Chin</td>\n",
+       "      <th>2869</th>\n",
+       "      <td>2869</td>\n",
+       "      <td>30 Arms Cable Rope Push-Down</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Strength</td>\n",
        "      <td>Triceps</td>\n",
-       "      <td>E-Z Curl Bar</td>\n",
-       "      <td>Beginner</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>Average</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2915</th>\n",
-       "      <td>2915</td>\n",
-       "      <td>EZ-Bar Skullcrusher - Gethin Variation</td>\n",
-       "      <td>The EZ-bar skullcrusher is a popular exercise ...</td>\n",
-       "      <td>Strength</td>\n",
-       "      <td>Triceps</td>\n",
-       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Cable</td>\n",
        "      <td>Intermediate</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2916</th>\n",
-       "      <td>2916</td>\n",
-       "      <td>TBS Skullcrusher</td>\n",
-       "      <td>The EZ-bar skullcrusher is a popular exercise ...</td>\n",
+       "      <th>2870</th>\n",
+       "      <td>2870</td>\n",
+       "      <td>30 Arms Cable Rope Overhead Triceps Extension</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Strength</td>\n",
        "      <td>Triceps</td>\n",
-       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Cable</td>\n",
        "      <td>Intermediate</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2917</th>\n",
-       "      <td>2917</td>\n",
-       "      <td>30 Arms EZ-Bar Skullcrusher</td>\n",
+       "      <th>2789</th>\n",
+       "      <td>2789</td>\n",
+       "      <td>30 Arms Barbell Skullcrusher</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Strength</td>\n",
        "      <td>Triceps</td>\n",
-       "      <td>E-Z Curl Bar</td>\n",
+       "      <td>Barbell</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2823</th>\n",
+       "      <td>2823</td>\n",
+       "      <td>30 Arms BFR Dumbbell Kick-Back</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>Dumbbell</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2909</th>\n",
+       "      <td>2909</td>\n",
+       "      <td>30 Arms BFR Close-Grip Push-Up</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Strength</td>\n",
+       "      <td>Triceps</td>\n",
+       "      <td>Body Only</td>\n",
        "      <td>Intermediate</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -3496,49 +3512,49 @@
        "</div>"
       ],
       "text/plain": [
-       "      Unnamed: 0                                           Title  \\\n",
-       "2767        2767                     Band overhead triceps press   \n",
-       "2768        2768                 Band overhead triceps extension   \n",
-       "2769        2769                     Band straight-arm pull-down   \n",
-       "2770        2770                               Band skullcrusher   \n",
-       "2771        2771                       Single-arm band kick-back   \n",
-       "...          ...                                             ...   \n",
-       "2913        2913                            EZ-bar skullcrusher-   \n",
-       "2914        2914  Lying Close-Grip Barbell Triceps Press To Chin   \n",
-       "2915        2915          EZ-Bar Skullcrusher - Gethin Variation   \n",
-       "2916        2916                                TBS Skullcrusher   \n",
-       "2917        2917                     30 Arms EZ-Bar Skullcrusher   \n",
+       "      Unnamed: 0                                          Title  \\\n",
+       "2882        2882                                    Triceps dip   \n",
+       "2791        2791                           Dumbbell floor press   \n",
+       "2911        2911                    Decline EZ-bar skullcrusher   \n",
+       "2883        2883                             Weighted bench dip   \n",
+       "2833        2833                          Cable V-bar push-down   \n",
+       "...          ...                                            ...   \n",
+       "2869        2869                   30 Arms Cable Rope Push-Down   \n",
+       "2870        2870  30 Arms Cable Rope Overhead Triceps Extension   \n",
+       "2789        2789                   30 Arms Barbell Skullcrusher   \n",
+       "2823        2823                 30 Arms BFR Dumbbell Kick-Back   \n",
+       "2909        2909                 30 Arms BFR Close-Grip Push-Up   \n",
        "\n",
-       "                                                   Desc      Type BodyPart  \\\n",
-       "2767  The band overhead triceps press is a dynamic a...  Strength  Triceps   \n",
-       "2768  The band overhead triceps extension is a singl...  Strength  Triceps   \n",
-       "2769  The band straight-arm pull-down is a non-gym o...  Strength  Triceps   \n",
-       "2770  The band skullcrusher is a variation of the po...  Strength  Triceps   \n",
-       "2771  The single-arm band kick-back is an isolation ...  Strength  Triceps   \n",
-       "...                                                 ...       ...      ...   \n",
-       "2913  The EZ-bar skullcrusher is a popular exercise ...  Strength  Triceps   \n",
-       "2914                                                NaN  Strength  Triceps   \n",
-       "2915  The EZ-bar skullcrusher is a popular exercise ...  Strength  Triceps   \n",
-       "2916  The EZ-bar skullcrusher is a popular exercise ...  Strength  Triceps   \n",
-       "2917                                                NaN  Strength  Triceps   \n",
+       "                                                   Desc          Type  \\\n",
+       "2882  The triceps dip is a bodyweight exercise perfo...      Strength   \n",
+       "2791  The dumbbell floor press is a multijoint press...  Powerlifting   \n",
+       "2911  The decline EZ-bar skullcrusher is a popular e...      Strength   \n",
+       "2883  The weighted bench dip is a highly effective e...      Strength   \n",
+       "2833  The cable V-bar push-down is a popular gym exe...      Strength   \n",
+       "...                                                 ...           ...   \n",
+       "2869                                                NaN      Strength   \n",
+       "2870                                                NaN      Strength   \n",
+       "2789                                                NaN      Strength   \n",
+       "2823                                                NaN      Strength   \n",
+       "2909                                                NaN      Strength   \n",
        "\n",
-       "         Equipment         Level  Rating RatingDesc  \n",
-       "2767         Bands  Intermediate     0.0        NaN  \n",
-       "2768         Bands  Intermediate     NaN        NaN  \n",
-       "2769         Bands  Intermediate     NaN        NaN  \n",
-       "2770         Bands  Intermediate     NaN        NaN  \n",
-       "2771         Bands  Intermediate     NaN        NaN  \n",
-       "...            ...           ...     ...        ...  \n",
-       "2913  E-Z Curl Bar  Intermediate     8.1    Average  \n",
-       "2914  E-Z Curl Bar      Beginner     8.1    Average  \n",
-       "2915  E-Z Curl Bar  Intermediate     NaN        NaN  \n",
-       "2916  E-Z Curl Bar  Intermediate     NaN        NaN  \n",
-       "2917  E-Z Curl Bar  Intermediate     NaN        NaN  \n",
+       "     BodyPart     Equipment         Level  Rating RatingDesc  \n",
+       "2882  Triceps     Body Only  Intermediate     9.4    Average  \n",
+       "2791  Triceps      Dumbbell  Intermediate     9.3    Average  \n",
+       "2911  Triceps  E-Z Curl Bar  Intermediate     9.3    Average  \n",
+       "2883  Triceps     Body Only  Intermediate     9.1    Average  \n",
+       "2833  Triceps         Cable  Intermediate     9.1    Average  \n",
+       "...       ...           ...           ...     ...        ...  \n",
+       "2869  Triceps         Cable  Intermediate     NaN        NaN  \n",
+       "2870  Triceps         Cable  Intermediate     NaN        NaN  \n",
+       "2789  Triceps       Barbell  Intermediate     NaN        NaN  \n",
+       "2823  Triceps      Dumbbell  Intermediate     NaN        NaN  \n",
+       "2909  Triceps     Body Only  Intermediate     NaN        NaN  \n",
        "\n",
        "[151 rows x 9 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
