Conducting more EDA

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -166,6 +166,16 @@
     "# Printing all exercises that target the triceps to see results\n",
     "tricep_exercises_df\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Top 5 hamstring exercises\n",
+    "hamstrings_exercises_df.head(5)"
+   ]
   }
  ],
  "metadata": {
